# fool

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  README.md  TODO  appveyor.yml  appveyor.yml.disabled  deploy.sh  log.err  populate.rb
assets/: style.toml
ci/: Dockerfile  after_deploy.sh  before_deploy.ps1  before_deploy.sh  homebrew.priv.enc  latest.dockerfile  script.sh
ci/docker/: linux-i686.dockerfile  linux-x86-64.dockerfile
ci/docker/freebsd-i686/: Dockerfile
ci/docker/freebsd-x86-64/: Dockerfile
ci/docker/linux-armv7/: Dockerfile
ci/docker/linux-i686/: Dockerfile
ci/docker/linux-x86-64/: Dockerfile
src/: buffer.rs  config.rs  git.rs  main.rs  theme.rs
src/state/: buffer.rs  git.rs  mod.rs
src/ui/: buffer.rs  commander.rs  container.rs  input.rs  layout.rs  mod.rs  theme.rs  workspace.rs
