[package]
name = "fool"
description = "A powerful and simple to use git client for Terminal interfaces"
version = "0.2.0"
license = "MIT/X11"
readme = "README.md"
authors = ["Katharina Fey <kookie@spacekookie.de>"]

[dependencies]
clap = "2.29.*"

[dependencies.cursive]
git = "https://github.com/gyscos/Cursive"
default-features = false
features = ["termion-backend"]